# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.180 2007/12/28 23:50:49 ulm Exp $

  28 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Include net-libs/liblockfile in dependencies, fixes bug #203624.

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.60-r1.ebuild:
  add dbus support

  02 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Declare some variables as local, add some quotes.

  02 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.50-r1.ebuild:
  make activation of dbus support possible

  01 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Rename site-init file for USE=source.

*emacs-cvs-23.0.0_p20070920-r1 (27 Nov 2007)
*emacs-cvs-22.1.50_p20070829-r2 (27 Nov 2007)

  27 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-format-int.patch, -emacs-cvs-22.1.50-r1.ebuild,
  -emacs-cvs-22.1.50_p20070829-r1.ebuild,
  +emacs-cvs-22.1.50_p20070829-r2.ebuild,
  -emacs-cvs-23.0.0_p20070920.ebuild, +emacs-cvs-23.0.0_p20070920-r1.ebuild,
  -emacs-cvs-23.0.50.ebuild, -emacs-cvs-23.0.60.ebuild:
  Synchronize CVS snapshots with app-editors/emacs; fixes buffer overflow in
  format function, CVE-2007-6109, security bug #200297. Remove old.

*emacs-cvs-23.0.60-r1 (27 Nov 2007)
*emacs-cvs-23.0.50-r1 (27 Nov 2007)
*emacs-cvs-22.1.50-r2 (27 Nov 2007)

  27 Nov 2007; Christian Faulhammer <opfer@gentoo.org>