@@ -9,10 +9,10 @@ AUX emacs-cvs-makeinfo-regexp.patch 553 RMD160 7e80b9d61a4cd253449252c98a5da47e0
 AUX emacs-cvs-no-x-compile.patch 452 RMD160 6c698c2ce80c496079810da7290315ff579c9194 SHA1 5501d6da55dace13027a327b331f2882d6c61a3d SHA256 cf6b5d8a48796618a98f3a66f85f0010290b277be1d605304e7d83f36cc69349
 DIST emacs-cvs-22.1.50_p20070829.tar.bz2 20915594 RMD160 47f3c1c543de65c49deadbcdf4e83236aaa68f1b SHA1 6223e5b4cde078814648306b095f6081f56eea77 SHA256 c27196e9359d5ad4f30e3552c7897c995798324a323a4b47060b98426a71891f
 DIST emacs-cvs-23.0.0_p20070920.tar.bz2 21944733 RMD160 4ca3f66530c44a82e1badba4dfc934b2e5e5b8d7 SHA1 7e8b99d695adaec619837a6eec22c04ac69cb7aa SHA256 c38d4be31e047f5a470b1664a2721b3dcb83b3876cb3490a86e05804aebf4f2a
-EBUILD emacs-cvs-22.1.50-r2.ebuild 8646 RMD160 b356f5cd34593b02717a706d38ac8138332a095c SHA1 3c354183e5fd1a9baaa3d88ef50bc0886a7135e5 SHA256 9a00a66a1c5f5317c8ec11a1ca0a9acd025545982c309e622a758af2c269f0e4
-EBUILD emacs-cvs-22.1.50_p20070829-r2.ebuild 8335 RMD160 1511d300fc5d4c5e376e65526bf1fad95bb9d77f SHA1 49ec2409dd578744961e625d1a26dec64d1a8b90 SHA256 9fbb09a59240545ee04bb430add324acb09f1877cc4c990ff6482c9a5c8ef161
-EBUILD emacs-cvs-23.0.0_p20070920-r1.ebuild 8629 RMD160 c2b8c829d55f2d98d8ab7bc3df6a032b9ea6cccd SHA1 77801406f6f0e75f622867735e516a096d2a35dd SHA256 c5da0a0b213af7c455b840ff08eecc52d599c454f833d58b404dfb777cde5341
-EBUILD emacs-cvs-23.0.50-r1.ebuild 8706 RMD160 fd37e00faa631268394e0a6147b1acd366478ab8 SHA1 1b9e2c05d792dfe7db2c5a14879da9f2bf29139c SHA256 9969bcffab976b0515b529c88fed831d8cb0cd12b2f2dd9c1d8bdbd37fc05594
-EBUILD emacs-cvs-23.0.60-r1.ebuild 8921 RMD160 a2ee530d24128056c3eb930ecab26ff1865465ce SHA1 2b2a80618ab055bdf5bc35b1fac39fbcae564fa6 SHA256 7e404e8a8973ae388db07cc6d7b6f49af7d283aa79d78f84f75a498185d1dd3e
-MISC ChangeLog 34882 RMD160 7ea63262ee6289823108c92d765916ccec9aa2cd SHA1 3bd175bcd11962313274211e30dce7350497e134 SHA256 50c4e3a8c77ca0bb8e231bb7b87d1795113e19941794a29146360a2a35b33284
+EBUILD emacs-cvs-22.1.50-r2.ebuild 8613 RMD160 868cfc948c80a388f74caae295c74b6fb75a90f0 SHA1 e1599ecfbb9b84642cddbb000cbad2c6219e3fde SHA256 f6f38fa7880a69aa166c4ee1d24e146d8fe95a2fecd94251b206b0556c6838df
+EBUILD emacs-cvs-22.1.50_p20070829-r2.ebuild 8302 RMD160 405086a032623d36d5dd25feeecd2d70884c595d SHA1 3f0a26d93b20b70a9e531197774588f8c8aee04b SHA256 e6424be376c0f2827f3b4d23c5de08ace6359b4807d44379bc583dbffcf91214
+EBUILD emacs-cvs-23.0.0_p20070920-r1.ebuild 8596 RMD160 34bbc1963099dc4510a092f8eee593a511130ae0 SHA1 23b24d0122c3c3e3bd009c9f90977187e85682be SHA256 680a01a22d15651aa415c9a0e999f6d6e33103ac49a904c32a7c553ef5e3dbdf
+EBUILD emacs-cvs-23.0.50-r1.ebuild 8673 RMD160 ef01c953fd90e949bf1ebbdf141f6f3a9b413dca SHA1 fa5b7faaaae2586e1f5f57902dbb92ce6483ba43 SHA256 4dcba29ded9399012eec9bf5c237509ae3cb118304f9ab0f7c63b3061d269c09
+EBUILD emacs-cvs-23.0.60-r1.ebuild 8888 RMD160 052073fb22c5de8770e028038642ef64df592db9 SHA1 924f5679858aebe21da5f7cd294b3e58667cd43a SHA256 1b20b61be8f74a7bc54b7642c8d80a8f583eec0606ab361f683d3fbebf35442c
+MISC ChangeLog 35135 RMD160 2ba93291542c8f0175b49224a8f59fd901d3cfe7 SHA1 fbcb68595c69aed8fec3378df4467f6f54c30778 SHA256 f68fb648009eded996dab903cae0774a890b57548a17a012d393dbc080cc8602
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
