@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/emacs-cvs
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.180 2007/12/28 23:50:49 ulm Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.181 2008/01/02 18:54:59 ulm Exp $
+
+  02 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
+  emacs-cvs-22.1.50_p20070829-r2.ebuild,
+  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
+  emacs-cvs-23.0.60-r1.ebuild:
+  Remove explicit zlib dependency.
 
   28 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
   emacs-cvs-22.1.50_p20070829-r2.ebuild,
